feat: implement Trust Mark Definitions
